[tool.poetry]
name = "anipy-cli-api"
version = "1.0.0"
description = "AniPy-CLI API Server"
authors = ["sdaqo"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
anipy-api = {git = "https://github.com/sdaqo/anipy-cli.git", subdirectory = "api"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"